A3/Part2/cyrix.output
Grammar

    0 $accept: translation_unit $end

    1 lambda_params: IDENTIFIER
    2              | lambda_params ',' IDENTIFIER

    3 lambda_expression: FN '(' ')' LAMBDA_ARROW assignment_expression
    4                  | FN '(' ')' LAMBDA_ARROW compound_statement
    5                  | FN '(' lambda_params ')' LAMBDA_ARROW assignment_expression
    6                  | FN '(' lambda_params ')' LAMBDA_ARROW compound_statement

    7 primary_expression: IDENTIFIER
    8                   | constant
    9                   | string
   10                   | '(' expression ')'
   11                   | generic_selection
   12                   | lambda_expression

   13 constant: I_CONSTANT
   14         | F_CONSTANT
   15         | ENUMERATION_CONSTANT

   16 enumeration_constant: IDENTIFIER

   17 string: STRING_LITERAL
   18       | FUNC_NAME

   19 generic_selection: GENERIC '(' assignment_expression ',' generic_assoc_list ')'

   20 generic_assoc_list: generic_association
   21                   | generic_assoc_list ',' generic_association

   22 generic_association: type_name ':' assignment_expression
   23                    | DEFAULT ':' assignment_expression

   24 postfix_expression: primary_expression
   25                   | postfix_expression '[' expression ']'
   26                   | postfix_expression '(' ')'
   27                   | postfix_expression '(' argument_expression_list ')'
   28                   | postfix_expression '.' IDENTIFIER
   29                   | postfix_expression PTR_OP IDENTIFIER
   30                   | postfix_expression SAFE_DOT IDENTIFIER
   31                   | postfix_expression INC_OP
   32                   | postfix_expression DEC_OP
   33                   | '(' type_name ')' '{' initializer_list '}'
   34                   | '(' type_name ')' '{' initializer_list ',' '}'

   35 argument_expression_list: assignment_expression
   36                         | argument_expression_list ',' assignment_expression

   37 unary_expression: postfix_expression
   38                 | INC_OP unary_expression
   39                 | DEC_OP unary_expression
   40                 | unary_operator cast_expression
   41                 | SIZEOF unary_expression
   42                 | SIZEOF '(' type_name ')'
   43                 | ALIGNOF '(' type_name ')'

   44 unary_operator: '&'
   45               | '*'
   46               | '+'
   47               | '-'
   48               | '~'
   49               | '!'

   50 cast_expression: unary_expression
   51                | '(' type_name ')' cast_expression

   52 power_expression: cast_expression
   53                 | cast_expression POW_OP power_expression

   54 multiplicative_expression: power_expression
   55                          | multiplicative_expression '*' power_expression
   56                          | multiplicative_expression '/' power_expression
   57                          | multiplicative_expression '%' power_expression

   58 additive_expression: multiplicative_expression
   59                    | additive_expression '+' multiplicative_expression
   60                    | additive_expression '-' multiplicative_expression

   61 shift_expression: additive_expression
   62                 | shift_expression LEFT_OP additive_expression
   63                 | shift_expression RIGHT_OP additive_expression

   64 relational_expression: shift_expression
   65                      | relational_expression '<' shift_expression
   66                      | relational_expression '>' shift_expression
   67                      | relational_expression LE_OP shift_expression
   68                      | relational_expression GE_OP shift_expression
   69                      | relational_expression TH_OP shift_expression

   70 equality_expression: relational_expression
   71                    | equality_expression EQ_OP relational_expression
   72                    | equality_expression NE_OP relational_expression

   73 and_expression: equality_expression
   74               | and_expression '&' equality_expression

   75 exclusive_or_expression: and_expression
   76                        | exclusive_or_expression '^' and_expression

   77 inclusive_or_expression: exclusive_or_expression
   78                        | inclusive_or_expression '|' exclusive_or_expression

   79 logical_and_expression: inclusive_or_expression
   80                       | logical_and_expression AND_OP inclusive_or_expression

   81 logical_or_expression: logical_and_expression
   82                      | logical_or_expression OR_OP logical_and_expression

   83 conditional_expression: logical_or_expression

   84 assignment_expression: conditional_expression
   85                      | unary_expression assignment_operator assignment_expression

   86 assignment_operator: '='
   87                    | MUL_ASSIGN
   88                    | DIV_ASSIGN
   89                    | MOD_ASSIGN
   90                    | ADD_ASSIGN
   91                    | SUB_ASSIGN
   92                    | LEFT_ASSIGN
   93                    | RIGHT_ASSIGN
   94                    | AND_ASSIGN
   95                    | XOR_ASSIGN
   96                    | OR_ASSIGN

   97 expression: assignment_expression
   98           | expression ',' assignment_expression

   99 constant_expression: conditional_expression

  100 var_init_list: var_init
  101              | var_init_list ',' var_init

  102 var_init: IDENTIFIER '=' assignment_expression

  103 var_declaration: VAR var_init_list ';'

  104 declaration: declaration_specifiers ';'
  105            | declaration_specifiers init_declarator_list ';'
  106            | static_assert_declaration
  107            | var_declaration

  108 declaration_specifiers: storage_class_specifier declaration_specifiers
  109                       | storage_class_specifier
  110                       | type_specifier declaration_specifiers
  111                       | type_specifier
  112                       | type_qualifier declaration_specifiers
  113                       | type_qualifier
  114                       | function_specifier declaration_specifiers
  115                       | function_specifier
  116                       | alignment_specifier declaration_specifiers
  117                       | alignment_specifier

  118 init_declarator_list: init_declarator
  119                     | init_declarator_list ',' init_declarator

  120 init_declarator: declarator '=' initializer
  121                | declarator

  122 storage_class_specifier: TYPEDEF
  123                        | EXTERN
  124                        | STATIC
  125                        | THREAD_LOCAL
  126                        | AUTO
  127                        | REGISTER

  128 type_specifier: VOID
  129               | CHAR
  130               | SHORT
  131               | INT
  132               | LONG
  133               | FLOAT
  134               | DOUBLE
  135               | SIGNED
  136               | UNSIGNED
  137               | BOOL
  138               | COMPLEX
  139               | IMAGINARY
  140               | atomic_type_specifier
  141               | struct_or_union_specifier
  142               | enum_specifier
  143               | TYPEDEF_NAME

  144 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
  145                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  146                          | struct_or_union IDENTIFIER

  147 struct_or_union: STRUCT
  148                | UNION

  149 struct_declaration_list: struct_declaration
  150                        | struct_declaration_list struct_declaration

  151 struct_declaration: specifier_qualifier_list ';'
  152                   | specifier_qualifier_list struct_declarator_list ';'
  153                   | static_assert_declaration

  154 specifier_qualifier_list: type_specifier specifier_qualifier_list
  155                         | type_specifier
  156                         | type_qualifier specifier_qualifier_list
  157                         | type_qualifier

  158 struct_declarator_list: struct_declarator
  159                       | struct_declarator_list ',' struct_declarator

  160 struct_declarator: ':' constant_expression
  161                  | declarator ':' constant_expression
  162                  | declarator

  163 enum_specifier: ENUM '{' enumerator_list '}'
  164               | ENUM '{' enumerator_list ',' '}'
  165               | ENUM IDENTIFIER '{' enumerator_list '}'
  166               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  167               | ENUM IDENTIFIER

  168 enumerator_list: enumerator
  169                | enumerator_list ',' enumerator

  170 enumerator: enumeration_constant '=' constant_expression
  171           | enumeration_constant

  172 atomic_type_specifier: ATOMIC '(' type_name ')'

  173 type_qualifier: CONST
  174               | RESTRICT
  175               | VOLATILE

  176 function_specifier: INLINE
  177                   | NORETURN

  178 alignment_specifier: ALIGNAS '(' type_name ')'
  179                    | ALIGNAS '(' constant_expression ')'

  180 declarator: pointer direct_declarator
  181           | direct_declarator

  182 direct_declarator: IDENTIFIER
  183                  | '(' declarator ')'
  184                  | direct_declarator '[' ']'
  185                  | direct_declarator '[' '*' ']'
  186                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  187                  | direct_declarator '[' STATIC assignment_expression ']'
  188                  | direct_declarator '[' type_qualifier_list '*' ']'
  189                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  190                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  191                  | direct_declarator '[' type_qualifier_list ']'
  192                  | direct_declarator '[' assignment_expression ']'
  193                  | direct_declarator '(' parameter_type_list ')'
  194                  | direct_declarator '(' ')'
  195                  | direct_declarator '(' identifier_list ')'

  196 pointer: '*' type_qualifier_list pointer
  197        | '*' type_qualifier_list
  198        | '*' pointer
  199        | '*'

  200 type_qualifier_list: type_qualifier
  201                    | type_qualifier_list type_qualifier

  202 parameter_type_list: parameter_list ',' ELLIPSIS
  203                    | parameter_list

  204 parameter_list: param_declaration
  205               | parameter_list ',' param_declaration

  206 param_declaration: declaration_specifiers declarator
  207                  | declaration_specifiers abstract_declarator
  208                  | declaration_specifiers
  209                  | declaration_specifiers declarator '=' assignment_expression

  210 identifier_list: IDENTIFIER
  211                | identifier_list ',' IDENTIFIER

  212 type_name: specifier_qualifier_list abstract_declarator
  213          | specifier_qualifier_list

  214 abstract_declarator: pointer direct_abstract_declarator
  215                    | pointer
  216                    | direct_abstract_declarator

  217 direct_abstract_declarator: '(' abstract_declarator ')'
  218                           | '[' ']'
  219                           | '[' '*' ']'
  220                           | '[' STATIC type_qualifier_list assignment_expression ']'
  221                           | '[' STATIC assignment_expression ']'
  222                           | '[' type_qualifier_list STATIC assignment_expression ']'
  223                           | '[' type_qualifier_list assignment_expression ']'
  224                           | '[' type_qualifier_list ']'
  225                           | '[' assignment_expression ']'
  226                           | direct_abstract_declarator '[' ']'
  227                           | direct_abstract_declarator '[' '*' ']'
  228                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  229                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  230                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  231                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  232                           | direct_abstract_declarator '[' type_qualifier_list ']'
  233                           | direct_abstract_declarator '[' assignment_expression ']'
  234                           | '(' ')'
  235                           | '(' parameter_type_list ')'
  236                           | direct_abstract_declarator '(' ')'
  237                           | direct_abstract_declarator '(' parameter_type_list ')'

  238 initializer: '{' initializer_list '}'
  239            | '{' initializer_list ',' '}'
  240            | assignment_expression

  241 initializer_list: designation initializer
  242                 | initializer
  243                 | initializer_list ',' designation initializer
  244                 | initializer_list ',' initializer

  245 designation: designator_list '='

  246 designator_list: designator
  247                | designator_list designator

  248 designator: '[' constant_expression ']'
  249           | '.' IDENTIFIER

  250 static_assert_declaration: STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

  251 statement: labeled_statement
  252          | compound_statement
  253          | expression_statement
  254          | selection_statement
  255          | iteration_statement
  256          | jump_statement

  257 labeled_statement: IDENTIFIER ':' statement
  258                  | CASE constant_expression ':' statement
  259                  | DEFAULT ':' statement

  260 compound_statement: '{' '}'
  261                   | '{' block_item_list '}'

  262 block_item_list: block_item
  263                | block_item_list block_item

  264 block_item: declaration
  265           | statement

  266 expression_statement: ';'
  267                     | expression ';'

  268 match_statement: MATCH '(' expression ')' '{' case_list default_opt '}'

  269 case_list: case_list match_case
  270          | match_case

  271 match_case: CASE constant_expression ':' statement

  272 default_opt: ε
  273            | DEFAULT ':' statement

  274 selection_statement: IF '(' expression ')' statement ELSE statement
  275                    | IF '(' expression ')' statement
  276                    | SWITCH '(' expression ')' statement
  277                    | match_statement

  278 foreach_var: IDENTIFIER
  279            | type_specifier IDENTIFIER

  280 iteration_statement: WHILE '(' expression ')' statement
  281                    | DO statement WHILE '(' expression ')' ';'
  282                    | FOR '(' expression_statement expression_statement ')' statement
  283                    | FOR '(' expression_statement expression_statement expression ')' statement
  284                    | FOR '(' declaration expression_statement ')' statement
  285                    | FOR '(' declaration expression_statement expression ')' statement
  286                    | FOREACH '(' foreach_var IN expression ')' statement

  287 jump_statement: GOTO IDENTIFIER ';'
  288               | CONTINUE ';'
  289               | BREAK ';'
  290               | RETURN ';'
  291               | RETURN expression ';'

  292 translation_unit: external_declaration
  293                 | translation_unit external_declaration

  294 external_declaration: function_definition
  295                     | declaration

  296 function_definition: declaration_specifiers declarator declaration_list compound_statement
  297                    | declaration_specifiers declarator compound_statement

  298 declaration_list: declaration
  299                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 49
    '%' (37) 57
    '&' (38) 44 74
    '(' (40) 3 4 5 6 10 19 26 27 33 34 42 43 51 172 178 179 183 193 194 195 217 234 235 236 237 250 268 274 275 276 280 281 282 283 284 285 286
    ')' (41) 3 4 5 6 10 19 26 27 33 34 42 43 51 172 178 179 183 193 194 195 217 234 235 236 237 250 268 274 275 276 280 281 282 283 284 285 286
    '*' (42) 45 55 185 188 196 197 198 199 219 227
    '+' (43) 46 59
    ',' (44) 2 19 21 34 36 98 101 119 159 164 166 169 202 205 211 239 243 244 250
    '-' (45) 47 60
    '.' (46) 28 249
    '/' (47) 56
    ':' (58) 22 23 160 161 257 258 259 271 273
    ';' (59) 103 104 105 151 152 250 266 267 281 287 288 289 290 291
    '<' (60) 65
    '=' (61) 86 102 120 170 209 245
    '>' (62) 66
    '[' (91) 25 184 185 186 187 188 189 190 191 192 218 219 220 221 222 223 224 225 226 227 228 229 230 231 232 233 248
    ']' (93) 25 184 185 186 187 188 189 190 191 192 218 219 220 221 222 223 224 225 226 227 228 229 230 231 232 233 248
    '^' (94) 76
    '{' (123) 33 34 144 145 163 164 165 166 238 239 260 261 268
    '|' (124) 78
    '}' (125) 33 34 144 145 163 164 165 166 238 239 260 261 268
    '~' (126) 48
    error (256)
    IDENTIFIER (258) 1 2 7 16 28 29 30 102 145 146 165 166 167 182 210 211 249 257 278 279 287
    I_CONSTANT (259) 13
    F_CONSTANT (260) 14
    STRING_LITERAL (261) 17 250
    FUNC_NAME (262) 18
    SIZEOF (263) 41 42
    PTR_OP (264) 29
    INC_OP (265) 31 38
    DEC_OP (266) 32 39
    LEFT_OP (267) 62
    RIGHT_OP (268) 63
    LE_OP (269) 67
    GE_OP (270) 68
    EQ_OP (271) 71
    NE_OP (272) 72
    TH_OP (273) 69
    AND_OP (274) 80
    OR_OP (275) 82
    MUL_ASSIGN (276) 87
    DIV_ASSIGN (277) 88
    MOD_ASSIGN (278) 89
    ADD_ASSIGN (279) 90
    SUB_ASSIGN (280) 91
    LEFT_ASSIGN (281) 92
    RIGHT_ASSIGN (282) 93
    AND_ASSIGN (283) 94
    XOR_ASSIGN (284) 95
    OR_ASSIGN (285) 96
    TYPEDEF_NAME (286) 143
    ENUMERATION_CONSTANT (287) 15
    VAR (288) 103
    FOREACH (289) 286
    IN (290) 286
    MATCH (291) 268
    FN (292) 3 4 5 6
    SAFE_DOT (293) 30
    LAMBDA_ARROW (294) 3 4 5 6
    POW_OP (295) 53
    TYPEDEF (296) 122
    EXTERN (297) 123
    STATIC (298) 124 186 187 189 220 221 222 228 229 231
    AUTO (299) 126
    REGISTER (300) 127
    INLINE (301) 176
    CONST (302) 173
    RESTRICT (303) 174
    VOLATILE (304) 175
    BOOL (305) 137
    CHAR (306) 129
    SHORT (307) 130
    INT (308) 131
    LONG (309) 132
    SIGNED (310) 135
    UNSIGNED (311) 136
    FLOAT (312) 133
    DOUBLE (313) 134
    VOID (314) 128
    COMPLEX (315) 138
    IMAGINARY (316) 139
    STRUCT (317) 147
    UNION (318) 148
    ENUM (319) 163 164 165 166 167
    ELLIPSIS (320) 202
    CASE (321) 258 271
    DEFAULT (322) 23 259 273
    IF (323) 274 275
    SWITCH (324) 276
    WHILE (325) 280 281
    DO (326) 281
    FOR (327) 282 283 284 285
    GOTO (328) 287
    CONTINUE (329) 288
    BREAK (330) 289
    RETURN (331) 290 291
    ALIGNAS (332) 178 179
    ALIGNOF (333) 43
    ATOMIC (334) 172
    GENERIC (335) 19
    NORETURN (336) 177
    STATIC_ASSERT (337) 250
    THREAD_LOCAL (338) 125
    LOWER_THAN_ELSE (339)
    ELSE (340) 274
    UNARY (341)


Nonterminals, with rules where they appear

    $accept (110)
        on left: 0
    lambda_params (111)
        on left: 1 2
        on right: 2 5 6
    lambda_expression (112)
        on left: 3 4 5 6
        on right: 12
    primary_expression (113)
        on left: 7 8 9 10 11 12
        on right: 24
    constant (114)
        on left: 13 14 15
        on right: 8
    enumeration_constant (115)
        on left: 16
        on right: 170 171
    string (116)
        on left: 17 18
        on right: 9
    generic_selection (117)
        on left: 19
        on right: 11
    generic_assoc_list (118)
        on left: 20 21
        on right: 19 21
    generic_association (119)
        on left: 22 23
        on right: 20 21
    postfix_expression (120)
        on left: 24 25 26 27 28 29 30 31 32 33 34
        on right: 25 26 27 28 29 30 31 32 37
    argument_expression_list (121)
        on left: 35 36
        on right: 27 36
    unary_expression (122)
        on left: 37 38 39 40 41 42 43
        on right: 38 39 41 50 85
    unary_operator (123)
        on left: 44 45 46 47 48 49
        on right: 40
    cast_expression (124)
        on left: 50 51
        on right: 40 51 52 53
    power_expression (125)
        on left: 52 53
        on right: 53 54 55 56 57
    multiplicative_expression (126)
        on left: 54 55 56 57
        on right: 55 56 57 58 59 60
    additive_expression (127)
        on left: 58 59 60
        on right: 59 60 61 62 63
    shift_expression (128)
        on left: 61 62 63
        on right: 62 63 64 65 66 67 68 69
    relational_expression (129)
        on left: 64 65 66 67 68 69
        on right: 65 66 67 68 69 70 71 72
    equality_expression (130)
        on left: 70 71 72
        on right: 71 72 73 74
    and_expression (131)
        on left: 73 74
        on right: 74 75 76
    exclusive_or_expression (132)
        on left: 75 76
        on right: 76 77 78
    inclusive_or_expression (133)
        on left: 77 78
        on right: 78 79 80
    logical_and_expression (134)
        on left: 79 80
        on right: 80 81 82
    logical_or_expression (135)
        on left: 81 82
        on right: 82 83
    conditional_expression (136)
        on left: 83
        on right: 84 99
    assignment_expression (137)
        on left: 84 85
        on right: 3 5 19 22 23 35 36 85 97 98 102 186 187 189 190 192 209 220 221 222 223 225 228 229 230 231 233 240
    assignment_operator (138)
        on left: 86 87 88 89 90 91 92 93 94 95 96
        on right: 85
    expression (139)
        on left: 97 98
        on right: 10 25 98 267 268 274 275 276 280 281 283 285 286 291
    constant_expression (140)
        on left: 99
        on right: 160 161 170 179 248 250 258 271
    var_init_list (141)
        on left: 100 101
        on right: 101 103
    var_init (142)
        on left: 102
        on right: 100 101
    var_declaration (143)
        on left: 103
        on right: 107
    declaration (144)
        on left: 104 105 106 107
        on right: 264 284 285 295 298 299
    declaration_specifiers (145)
        on left: 108 109 110 111 112 113 114 115 116 117
        on right: 104 105 108 110 112 114 116 206 207 208 209 296 297
    init_declarator_list (146)
        on left: 118 119
        on right: 105 119
    init_declarator (147)
        on left: 120 121
        on right: 118 119
    storage_class_specifier (148)
        on left: 122 123 124 125 126 127
        on right: 108 109
    type_specifier (149)
        on left: 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143
        on right: 110 111 154 155 279
    struct_or_union_specifier (150)
        on left: 144 145 146
        on right: 141
    struct_or_union (151)
        on left: 147 148
        on right: 144 145 146
    struct_declaration_list (152)
        on left: 149 150
        on right: 144 145 150
    struct_declaration (153)
        on left: 151 152 153
        on right: 149 150
    specifier_qualifier_list (154)
        on left: 154 155 156 157
        on right: 151 152 154 156 212 213
    struct_declarator_list (155)
        on left: 158 159
        on right: 152 159
    struct_declarator (156)
        on left: 160 161 162
        on right: 158 159
    enum_specifier (157)
        on left: 163 164 165 166 167
        on right: 142
    enumerator_list (158)
        on left: 168 169
        on right: 163 164 165 166 169
    enumerator (159)
        on left: 170 171
        on right: 168 169
    atomic_type_specifier (160)
        on left: 172
        on right: 140
    type_qualifier (161)
        on left: 173 174 175
        on right: 112 113 156 157 200 201
    function_specifier (162)
        on left: 176 177
        on right: 114 115
    alignment_specifier (163)
        on left: 178 179
        on right: 116 117
    declarator (164)
        on left: 180 181
        on right: 120 121 161 162 183 206 209 296 297
    direct_declarator (165)
        on left: 182 183 184 185 186 187 188 189 190 191 192 193 194 195
        on right: 180 181 184 185 186 187 188 189 190 191 192 193 194 195
    pointer (166)
        on left: 196 197 198 199
        on right: 180 196 198 214 215
    type_qualifier_list (167)
        on left: 200 201
        on right: 186 188 189 190 191 196 197 201 220 222 223 224 228 230 231 232
    parameter_type_list (168)
        on left: 202 203
        on right: 193 235 237
    parameter_list (169)
        on left: 204 205
        on right: 202 203 205
    param_declaration (170)
        on left: 206 207 208 209
        on right: 204 205
    identifier_list (171)
        on left: 210 211
        on right: 195 211
    type_name (172)
        on left: 212 213
        on right: 22 33 34 42 43 51 172 178
    abstract_declarator (173)
        on left: 214 215 216
        on right: 207 212 217
    direct_abstract_declarator (174)
        on left: 217 218 219 220 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236 237
        on right: 214 216 226 227 228 229 230 231 232 233 236 237
    initializer (175)
        on left: 238 239 240
        on right: 120 241 242 243 244
    initializer_list (176)
        on left: 241 242 243 244
        on right: 33 34 238 239 243 244
    designation (177)
        on left: 245
        on right: 241 243
    designator_list (178)
        on left: 246 247
        on right: 245 247
    designator (179)
        on left: 248 249
        on right: 246 247
    static_assert_declaration (180)
        on left: 250
        on right: 106 153
    statement (181)
        on left: 251 252 253 254 255 256
        on right: 257 258 259 265 271 273 274 275 276 280 281 282 283 284 285 286
    labeled_statement (182)
        on left: 257 258 259
        on right: 251
    compound_statement (183)
        on left: 260 261
        on right: 4 6 252 296 297
    block_item_list (184)
        on left: 262 263
        on right: 261 263
    block_item (185)
        on left: 264 265
        on right: 262 263
    expression_statement (186)
        on left: 266 267
        on right: 253 282 283 284 285
    match_statement (187)
        on left: 268
        on right: 277
    case_list (188)
        on left: 269 270
        on right: 268 269
    match_case (189)
        on left: 271
        on right: 269 270
    default_opt (190)
        on left: 272 273
        on right: 268
    selection_statement (191)
        on left: 274 275 276 277
        on right: 254
    foreach_var (192)
        on left: 278 279
        on right: 286
    iteration_statement (193)
        on left: 280 281 282 283 284 285 286
        on right: 255
    jump_statement (194)
        on left: 287 288 289 290 291
        on right: 256
    translation_unit (195)
        on left: 292 293
        on right: 0 293
    external_declaration (196)
        on left: 294 295
        on right: 292 293
    function_definition (197)
        on left: 296 297
        on right: 294
    declaration_list (198)
        on left: 298 299
        on right: 296 299


State 0

    0 $accept: • translation_unit $end

    TYPEDEF_NAME   shift, and go to state 1
    VAR            shift, and go to state 2
    TYPEDEF        shift, and go to state 3
    EXTERN         shift, and go to state 4
    STATIC         shift, and go to state 5
    AUTO           shift, and go to state 6
    REGISTER       shift, and go to state 7
    INLINE         shift, and go to state 8
    CONST          shift, and go to state 9
    RESTRICT       shift, and go to state 10
    VOLATILE       shift, and go to state 11
    BOOL           shift, and go to state 12
    CHAR           shift, and go to state 13
    SHORT          shift, and go to state 14
    INT            shift, and go to state 15
    LONG           shift, and go to state 16
    SIGNED         shift, and go to state 17
    UNSIGNED       shift, and go to state 18
    FLOAT          shift, and go to state 19
    DOUBLE         shift, and go to state 20
    VOID           shift, and go to state 21
    COMPLEX        shift, and go to state 22
    IMAGINARY      shift, and go to state 23
    STRUCT         shift, and go to state 24
    UNION          shift, and go to state 25
    ENUM           shift, and go to state 26
    ALIGNAS        shift, and go to state 27
    ATOMIC         shift, and go to state 28
    NORETURN       shift, and go to state 29
    STATIC_ASSERT  shift, and go to state 30
    THREAD_LOCAL   shift, and go to state 31

    var_declaration            go to state 32
    declaration                go to state 33
    declaration_specifiers     go to state 34
    storage_class_specifier    go to state 35
    type_specifier             go to state 36
    struct_or_union_specifier  go to state 37
    struct_or_union            go to state 38
    enum_specifier             go to state 39
    atomic_type_specifier      go to state 40
    type_qualifier             go to state 41
    function_specifier         go to state 42
    alignment_specifier        go to state 43
    static_assert_declaration  go to state 44
    translation_unit           go to state 45
    external_declaration       go to state 46
    function_definition        go to state 47


State 1

  143 type_specifier: TYPEDEF_NAME •

    $default  reduce using rule 143 (type_specifier)


State 2

  103 var_declaration: VAR • var_init_list ';'

    IDENTIFIER  shift, and go to state 48

    var_init_list  go to state 49
    var_init       go to state 50


State 3

  122 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 122 (storage_class_specifier)


State 4

  123 storage_class_specifier: EXTERN •

    $default  reduce using rule 123 (storage_class_specifier)


State 5

  124 storage_class_specifier: STATIC •

    $default  reduce using rule 124 (storage_class_specifier)


State 6

  126 storage_class_specifier: AUTO •

    $default  reduce using rule 126 (storage_class_specifier)


State 7

  127 storage_class_specifier: REGISTER •

    $default  reduce using rule 127 (storage_class_specifier)


State 8

  176 function_specifier: INLINE •

    $default  reduce using rule 176 (function_specifier)


State 9

  173 type_qualifier: CONST •

    $default  reduce using rule 173 (type_qualifier)


State 10

  174 type_qualifier: RESTRICT •

    $default  reduce using rule 174 (type_qualifier)


State 11

  175 type_qualifier: VOLATILE •

    $default  reduce using rule 175 (type_qualifier)


State 12

  137 type_specifier: BOOL •

    $default  reduce using rule 137 (type_specifier)


State 13

  129 type_specifier: CHAR •

    $default  reduce using rule 129 (type_specifier)


State 14

  130 type_specifier: SHORT •

    $default  reduce using rule 130 (type_specifier)


State 15

  131 type_specifier: INT •

    $default  reduce using rule 131 (type_specifier)


State 16

  132 type_specifier: LONG •

    $default  reduce using rule 132 (type_specifier)


State 17

  135 type_specifier: SIGNED •

    $default  reduce using rule 135 (type_specifier)


State 18

  136 type_specifier: UNSIGNED •

    $default  reduce using rule 136 (type_specifier)


State 19

  133 type_specifier: FLOAT •

    $default  reduce using rule 133 (type_specifier)


State 20

  134 type_specifier: DOUBLE •

    $default  reduce using rule 134 (type_specifier)


State 21

  128 type_specifier: VOID •

    $default  reduce using rule 128 (type_specifier)


State 22

  138 type_specifier: COMPLEX •

    $default  reduce using rule 138 (type_specifier)


State 23

  139 type_specifier: IMAGINARY •

    $default  reduce using rule 139 (type_specifier)


State 24

  147 struct_or_union: STRUCT •

    $default  reduce using rule 147 (struct_or_union)


State 25

  148 struct_or_union: UNION •

    $default  reduce using rule 148 (struct_or_union)


State 26

  163 enum_specifier: ENUM • '{' enumerator_list '}'
  164               | ENUM • '{' enumerator_list ',' '}'
  165               | ENUM • IDENTIFIER '{' enumerator_list '}'
  166               | ENUM • IDENTIFIER '{' enumerator_list ',' '}'
  167               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 51
    '{'         shift, and go to state 52


State 27

  178 alignment_specifier: ALIGNAS • '(' type_name ')'
  179                    | ALIGNAS • '(' constant_expression ')'

    '('  shift, and go to state 53


State 28

  172 atomic_type_specifier: ATOMIC • '(' type_name ')'

    '('  shift, and go to state 54


State 29

  177 function_specifier: NORETURN •

    $default  reduce using rule 177 (function_specifier)


State 30

  250 static_assert_declaration: STATIC_ASSERT • '(' constant_expression ',' STRING_LITERAL ')' ';'

    '('  shift, and go to state 55


State 31

  125 storage_class_specifier: THREAD_LOCAL •

    $default  reduce using rule 125 (storage_class_specifier)


State 32

  107 declaration: var_declaration •

    $default  reduce using rule 107 (declaration)


State 33

  295 external_declaration: declaration •

    $default  reduce using rule 295 (external_declaration)


State 34

  104 declaration: declaration_specifiers • ';'
  105            | declaration_specifiers • init_declarator_list ';'
  296 function_definition: declaration_specifiers • declarator declaration_list compound_statement
  297                    | declaration_specifiers • declarator compound_statement

    IDENTIFIER  shift, and go to state 56
    '*'         shift, and go to state 57
    '('         shift, and go to state 58
    ';'         shift, and go to state 59

    init_declarator_list  go to state 60
    init_declarator       go to state 61
    declarator            go to state 62
    direct_declarator     go to state 63
    pointer               go to state 64


State 35

  108 declaration_specifiers: storage_class_specifier • declaration_specifiers
  109                       | storage_class_specifier •

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 3
    EXTERN        shift, and go to state 4
    STATIC        shift, and go to state 5
    AUTO          shift, and go to state 6
    REGISTER      shift, and go to state 7
    INLINE        shift, and go to state 8
    CONST         shift, and go to state 9
    RESTRICT      shift, and go to state 10
    VOLATILE      shift, and go to state 11
    BOOL          shift, and go to state 12
    CHAR          shift, and go to state 13
    SHORT         shift, and go to state 14
    INT           shift, and go to state 15
    LONG          shift, and go to state 16
    SIGNED        shift, and go to state 17
    UNSIGNED      shift, and go to state 18
    FLOAT         shift, and go to state 19
    DOUBLE        shift, and go to state 20
    VOID          shift, and go to state 21
    COMPLEX       shift, and go to state 22
    IMAGINARY     shift, and go to state 23
    STRUCT        shift, and go to state 24
    UNION         shift, and go to state 25
    ENUM          shift, and go to state 26
    ALIGNAS       shift, and go to state 27
    ATOMIC        shift, and go to state 28
    NORETURN      shift, and go to state 29
    THREAD_LOCAL  shift, and go to state 31

    $default  reduce using rule 109 (declaration_specifiers)

    declaration_specifiers     go to state 65
    storage_class_specifier    go to state 35
    type_specifier             go to state 36
    struct_or_union_specifier  go to state 37
    struct_or_union            go to state 38
    enum_specifier             go to state 39
    atomic_type_specifier      go to state 40
    type_qualifier             go to state 41
    function_specifier         go to state 42
    alignment_specifier        go to state 43


State 36

  110 declaration_specifiers: type_specifier • declaration_specifiers
  111                       | type_specifier •

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 3
    EXTERN        shift, and go to state 4
    STATIC        shift, and go to state 5
    AUTO          shift, and go to state 6
    REGISTER      shift, and go to state 7
    INLINE        shift, and go to state 8
    CONST         shift, and go to state 9
    RESTRICT      shift, and go to state 10
    VOLATILE      shift, and go to state 11
    BOOL          shift, and go to state 12
    CHAR          shift, and go to state 13
    SHORT         shift, and go to state 14
    INT           shift, and go to state 15
    LONG          shift, and go to state 16
    SIGNED        shift, and go to state 17
    UNSIGNED      shift, and go to state 18
    FLOAT         shift, and go to state 19
    DOUBLE        shift, and go to state 20
    VOID          shift, and go to state 21
    COMPLEX       shift, and go to state 22
    IMAGINARY     shift, and go to state 23
    STRUCT        shift, and go to state 24
    UNION         shift, and go to state 25
    ENUM          shift, and go to state 26
    ALIGNAS       shift, and go to state 27
    ATOMIC        shift, and go to state 28
    NORETURN      shift, and go to state 29
    THREAD_LOCAL  shift, and go to state 31

    $default  reduce using rule 111 (declaration_specifiers)

    declaration_specifiers     go to state 66
    storage_class_specifier    go to state 35
    type_specifier             go to state 36
    struct_or_union_specifier  go to state 37
    struct_or_union            go to state 38
    enum_specifier             go to state 39
    atomic_type_specifier      go to state 40
    type_qualifier             go to state 41
    function_specifier         go to state 42
    alignment_specifier        go to state 43


State 37

  141 type_specifier: struct_or_union_specifier •

    $default  reduce using rule 141 (type_specifier)


State 38
